--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
   <section class="header">
     <nav>
       <div class="logo">
-        <img src="images/logo.png" >
+          <a href="index.html"><img src="images/logo.png"></a>
+         
       </div>
       <div class="nav-links" id="navLinks">
         <i class="fa-sharp fa-solid fa-xmark" onclick="hideMenu()"></i>
         <ul> 
-          <li><a href="Home.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="Courses.html">COURSES</a></li>
           <li><a href="MyAccount.html">MY ACCOUNT</a></li>
           <li><a href="ContactUs.html">CONTACT US</a></li>
