--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="header">
     <nav>
       <div class="logo">
-          <a href="index.html"><img src="images/logo.png"></a>
+        <img src="images/logo.png">
          
       </div>
       <div class="nav-links" id="navLinks">
