--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="header">
     <nav>
       <div class="logo">
-        <img src="images/logo.png">
+        <img src="Images/logo.png">
          
       </div>
       <div class="nav-links" id="navLinks">
@@ -24,7 +24,7 @@
           <li><a href="Courses.html">COURSES</a></li>
           <li><a href="MyAccount.html">MY ACCOUNT</a></li>
           <li><a href="ContactUs.html">CONTACT US</a></li>
-          <li><a href="Cart.html"><img src="images/cart.png" width="30px" height="30px" ></a></li>
+          <li><a href="Cart.html"><img src="Images/cart.png" width="30px" height="30px" ></a></li>
         </ul>
       </div>
       <i class="fa-solid fa-bars" onclick="showMenu()"></i>
