--- a/Cart.html
+++ b/Cart.html
@@ -13,7 +13,7 @@
 <body>
   <section class="header">
     <nav>
-      <a href="Home.html"><img src="images/logo.png"></a>
+      <a href="index.html"><img src="Images/logo.png"></a>
       <div class="nav-links" id="navLinks">
         <i class="fa-sharp fa-solid fa-xmark" onclick="hideMenu()"></i>
         <ul> 
@@ -21,7 +21,7 @@
           <li><a href="Courses.html">COURSES</a></li>
           <li><a href="MyAccount.html">MY ACCOUNT</a></li>
           <li><a href="ContactUs.html">CONTACT US</a></li>
-          <li><a href="Cart.html"><img src="images/cart.png" width="30px" height="30px" ></a></li>
+          <li><a href="Cart.html"><img src="Images/cart.png" width="30px" height="30px" ></a></li>
         </ul>
       </div>
       <i class="fa-solid fa-bars" onclick="showMenu()"></i>
