--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="header">
     <nav>
       <div class="logo">
-        <img src="Images/logo.png">
+      <a href="index.html"><img src="Images/logo.png"></a>
          
       </div>
       <div class="nav-links" id="navLinks">
