--- a/Courses.html
+++ b/Courses.html
@@ -19,7 +19,7 @@
       <div class="nav-links" id="navLinks">
         <i class="fa-sharp fa-solid fa-xmark" onclick="hideMenu()"></i>
         <ul> 
-          <li><a href="Home.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="Courses.html">COURSES</a></li>
           <li><a href="MyAccount.html">MY ACCOUNT</a></li>
           <li><a href="ContactUs.html">CONTACT US</a></li>
