--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="text-box">
   <h1>Learn The Latest Techniques In Dental Care</h1>
   <p>Our courses provide in-depth training on the newest and most effective dental procedures, so you can provide the best care to your patients.</p>
-  <a href=""class="hero-btn">See Courses</a>
+  <a href="Courses.html"class="hero-btn">See Courses</a>
   <br>
   <br>
   <br>
@@ -45,25 +45,25 @@
 <!-------- Course --------->
 
 <section class="course">
-  <h1>Courses We Offer</h1>
+  <h1>On Going Deals</h1>
   <p></p>
 
   <div class="row">
     <div class="course-col">
-      <h3>Intermediate</h3>
-      <p>Snjdn djndjndj djndsjndj dndsjnd</p>
+      <h3>8 Hour Infection Control + Dental Practice</h3>
+      <p></p>
       <br>
       <a href="Courses.html" class="course1-btn">More Info</a>
     </div>  
     <div class="course-col">
-      <h3>Degree</h3>
-      <p>Snjdn djndjndj djndsjndj dndsjnd</p>
+      <h3>RDA Examination Review</h3>
+      <p></p>
       <br>
       <a href="Courses.html" class="course2-btn">More Info</a>
     </div>
     <div class="course-col">
-      <h3>Post Graduation</h3>
-      <p>Snjdn djndjndj djndsjndj dndsjnd</p>
+      <h3>2 Hour Infection Control + Dental Practice Act</h3>
+      <p></p>
       <br>
       <a href="Courses.html" class="course3-btn">More Info</a>
     </div>
